Add frontend theme extension

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,10 @@
         {
             "name": "Artjoms Travkovs",
             "email": "artjoms.travkovs@scandiweb.com"
+        },
+        {
+            "name": "Jegors Batovs",
+            "email": "yegor@scandipwa.com"
         }
     ],
     "license": [
